# skillshub

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README-zh.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  calc_coverage.py  calc_coverage_v2.py  calc_coverage_v3.py  tarpaulin.toml
backend/migrations/: 001_initial.sql  002_fulltext_search.sql  003_fix_rating_avg.sql  004_add_skill_slug_registry.sql  005_add_skill_packages.sql
backend/src/: config.rs  error.rs  main.rs  openapi.rs
backend/src/handlers/: admin.rs  auth.rs  comments.rs  favorites.rs  mod.rs  ratings.rs  registry.rs  skills.rs  versions.rs
backend/src/middleware/: auth.rs  logging.rs  mod.rs
backend/src/models/: comment.rs  favorite.rs  mod.rs  moderation_log.rs  rating.rs  skill.rs  skill_package.rs  skill_version.rs  user.rs
backend/src/routes/: mod.rs  ratings.rs
backend/src/services/: auth.rs  cache.rs  database.rs  mod.rs  skill_package.rs
backend/tests/: api_tests.rs
cli/: CLAUDE.md  Cargo.toml  package-lock.json  package.json  tsconfig.json
cli/src/: auth.rs  cli.rs  config.rs  error.rs  fs.rs  install.rs  lib.rs  main.rs  package.rs
cli/src/api/: client.rs  mod.rs  types.rs
cli/src/commands/: config.rs  install.rs  install.ts  login.rs  logout.rs  mod.rs  package.rs  publish.rs  uninstall.rs  whoami.rs
cli/src/commands/config/: index.ts  rep.ts  repositories.ts
cli/src/lib/: client.ts  config.ts  files.ts  installers.ts  state.ts  targets.ts  types.ts
cli/tests/: config.test.ts  installers.test.ts  state.test.ts  targets.test.ts
docs/: API.md  ARCHITECTURE.md  CLI-RUST.md  DEPLOYMENT.md  DEVELOPMENT.md  GETTING-STARTED.md  MANUAL-DEPLOYMENT.md  plan.md  reference.md
frontend/: .dockerignore  .gitignore  (+10 more)
(+69 files in other folders)
