[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.15"
jsonwebtoken = "9.1"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "request-id", "compression-gzip"] }
utoipa = { version = "5.4", features = ["axum_extras", "chrono", "uuid"] }
reqwest = { version = "0.13.2", features = ["json"] }
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.16"
sha2 = "0.10"

[dev-dependencies]
serial_test = "3.4.0"
tokio-test = "0.4.5"
