[package]
name = "skillshub-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "skhub"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "fs"] }
urlencoding = "2.1"
walkdir = "2.5"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.13"
